# LLM-Data-Saas

./: .env.example  .gitignore  AGENTS.md  Dockerfile  README.md  docker-compose.yml
backend/: .gitignore  pyproject.toml
backend/scripts/: seed_from_legacy.py
backend/service/: __init__.py  config.py  crud.py  db.py  deps.py  llm_client.py  main.py  models.py  prompt_render.py  schemas.py  security.py  session.py  sse.py  static.py  supervisor.py  worker.py  worker_io.py  worker_run.py
backend/service/routers/: api_configs.py  auth.py  categories.py  meta.py  prompt_templates.py  tasks.py  tasks_stream.py  wordlists.py
backend/tests/: conftest.py  test_auth.py  test_config.py  test_crud.py  test_db.py  test_health.py  test_llm_client.py  test_main_startup.py  test_models.py  test_prompt_render.py  test_routers_api_config_test.py  test_routers_api_configs.py  test_routers_categories.py  test_routers_meta.py  test_routers_prompt_templates.py  test_routers_tasks.py  test_routers_wordlists.py  test_schemas.py  test_security.py  test_seed_from_legacy.py  test_sse.py  test_startup_recovery.py  test_static.py  test_supervisor.py  test_supervisor_poll.py  test_worker_cli.py  test_worker_io.py  test_worker_resume.py  test_worker_run.py
docs/superpowers/plans/: 2026-05-11-llm-data-service.md  2026-05-12-llm-data-service-frontend.md  2026-05-12-llm-data-service-part2.md  2026-05-13-frontend-phase2.md  2026-05-13-phase3-auth.md  (+2 more)
frontend/: .env.production  index.html  package-lock.json  package.json  vite.config.ts
frontend/src/: App.tsx  index.css
(+62 files in other folders)
